--- a/less/global.less
+++ b/less/global.less
@@ -20,6 +20,12 @@ html, body {
     font-family: @raleway;
 }
 
+.shadow {
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+    0px 8px 13px rgba(0,0,0,0.1),
+    0px 18px 23px rgba(0,0,0,0.1);
+}
+
 #wrapper {
     width: 100%;
     height: 100%;
@@ -93,6 +99,11 @@ html, body {
     -ms-transform: rotate(90deg); /* IE */
 }
 
+.section-title {
+    font-size: 48px;
+    color: @white;
+}
+
 .example-wrapper {
     margin-top: 87px;
 }
@@ -141,6 +152,10 @@ footer {
     bottom: 5px;
     padding:0 15px 0 5px;
     position: fixed;
+
+    //Removes Chrome flickering problem
+    -webkit-backface-visibility:hidden;
+    -webkit-transform: translateZ(0);
 
     font-size: 10px;
     z-index: @peak;
